Fixed input spacing on session editor

--- a/app/index.css
+++ b/app/index.css
@@ -14,6 +14,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
+.modal-bg {
+  backdrop-filter: blur(5px) brightness(80%);
+  -webkit-backdrop-filter: blur(5px) brightness(80%);
+}
+
 .hover-show-child > .hover-parent-show {
   opacity: 0;
 }
